terraform/010-terraform-wordpress-project/security-groups.tf
resource "aws_security_group" "wordpress_sg" {
  name = "http_server_sg_wordpress_proj"
  # vpc_id = "vpc-08199515cc12c93b8"
  vpc_id = aws_vpc.vpc_wordpress.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow incoming traffic on port 80"
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow incoming traffic on port 443"
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow incoming SSH traffic"
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    name = "wordpress-sg"
  }
}


# Create security group for MySQL EC2 instance in the private subnet
resource "aws_security_group" "mysql_sg" {
  vpc_id = aws_vpc.vpc_wordpress.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["10.0.1.0/24"] # Allow incoming traffic from the public subnet
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
    description = "Allow incoming SSH traffic"
  }


  tags = {
    Name = "MySQL Security Group"
  }
}



# security group rule for my sql
